--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+code {
+  background-color: #eee;
+  border-radius: 3px;
+  font-family: courier, monospace;
+  padding: 0 3px;
+}
+
+.code-description {
+  background-color: #eee;
+  border-radius: 3px;
+  margin: 1rem 1rem;
+  padding: 1rem 0.5rem;
+}
