--- a/src/App.css
+++ b/src/App.css
@@ -37,16 +37,16 @@
   }
 }
 
-code {
+/* code {
   background-color: #eee;
   border-radius: 3px;
   font-family: courier, monospace;
   padding: 0 3px;
-}
+} */
 
-.code-description {
+/* .code-description {
   background-color: #eee;
   border-radius: 3px;
   margin: 1rem 1rem;
   padding: 1rem 0.5rem;
-}
+} */
