added language and number fields to code upload

--- a/src/App.css
+++ b/src/App.css
@@ -44,12 +44,12 @@
   padding: 0 3px;
 } */
 
-/* .code-description {
+.code-description {
   background-color: #eee;
   border-radius: 3px;
   margin: 1rem 1rem;
   padding: 1rem 0.5rem;
-} */
+}
 
 .wrapline {
   white-space: pre-line;
